--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -39,8 +39,9 @@ jobs:
           oci: true
 
       - name: Push Image to GHCR
-        uses: redhat-actions/push-to-registry@v2
         id: push
+        if: github.ref == 'refs/heads/main'
+        uses: redhat-actions/push-to-registry@v2
         with:
           image: ${{ matrix.image_name }}
           tags: ${{ steps.build_image.outputs.tags }}
@@ -49,3 +50,8 @@ jobs:
           password: ${{ env.REGISTRY_PASSWORD }}
           extra-args: |
             --disable-content-trust
+
+      - name: Echo outputs
+        if: github.ref == 'refs/heads/main'
+        run: |
+          echo "${{ toJSON(steps.push.outputs) }}"
