--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -29,10 +29,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Image
+        id: build_image
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ matrix.image_name }}
-          tags: ${{ env.IMAGE_TAGS }}
+          tags: ${{ env.IMAGE_TAGS }} ${{ env.DATE }}
           context: ${{ matrix.location }}
           containerfiles: |
             ${{ matrix.location }}/Containerfile
@@ -46,6 +47,9 @@ jobs:
         uses: ASzc/change-string-case-action@v5
         with:
            string: ${{ env.IMAGE_REGISTRY }}
+
+      - name: Set build date
+        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
 
       - name: Push Image to GHCR
         id: push
