--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -4,6 +4,11 @@ on:
   push:
     paths-ignore:
       - '.github/**'
+    branches:
+      - main
+  pull_request:
+    paths-ignore:
+      - '.github/**'
   schedule:
     - cron: '0 0 * * *' # Daily at midnight
 
