Generate build date on main only

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -54,6 +54,7 @@ jobs:
            string: ${{ env.IMAGE_REGISTRY }}
 
       - name: Set build date
+        if: github.ref == 'refs/heads/main'
         run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
 
       - name: Push Image to GHCR
