chore(base): Upgrade base image name (#7)

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -27,7 +27,7 @@ jobs:
       matrix:
         include:
           - location: ./base
-            image_name: base
+            image_name: silverblue-base
 
     steps:
       - name: Checkout
