Configure GitHub Actions to build both base images

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -13,7 +13,6 @@ on:
     - cron: '0 0 * * *' # Daily at midnight
 
 env:
-  IMAGE_TAGS: latest ${{ github.sha }}
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
   REGISTRY_USER: ${{ github.actor }}
   REGISTRY_PASSWORD: ${{ github.token }}
@@ -25,26 +24,43 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        fedora_major_version: [37]
+        fedora_project: [silverblue]
         include:
+          - image_name: fedora-base
           - location: ./base
-            image_name: silverblue-base
+          - tags: ${{ github.sha }}
+          - fedora_major_version: 37
+            tags: latest stable
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set build date
-        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+      - name: Generate metadata
+        id: generate-metadata
+        shell: bash
+        run: |
+          echo "date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "release=${{ matrix.fedora_major_version }}-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
+          echo "default_tags=${{ matrix.tags }}" >> $GITHUB_OUTPUT
 
       - name: Build image
         id: build_image
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ matrix.image_name }}
-          tags: ${{ env.IMAGE_TAGS }} ${{ env.DATE }}
+          tags: |
+            ${{ steps.generate-metadata.outputs.default_tags }}
+            ${{ steps.generate-metadata.outputs.release }}
+            ${{ steps.generate-metadata.outputs.date }}
+            ${{ steps.generate-metadata.outputs.sha_short }}
           context: ${{ matrix.location }}
           containerfiles: |
-            ${{ matrix.location }}/Containerfile
+            ${{ matrix.location }}/Containerfile.${{ matrix.fedora_project }}
+          build-args: |
+            FEDORA_MAJOR_VERSION=${{ matrix.fedora_major_version }}
           oci: true
 
       # Workaround bug where capital letters in your GitHub user name make it impossible to push to GHCR.
