--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -6,11 +6,13 @@ on:
       - '.github/**'
     branches:
       - main
+# To save on build minutes, this should currently be tested locally
   pull_request:
     paths-ignore:
       - '.github/**'
   schedule:
-    - cron: '0 0 * * *' # Daily at midnight
+    # Every Monday at 00:00 while the repository is not used, or is in active development
+    - cron: '0 0 * * 1'
 
 env:
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
@@ -29,7 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         fedora_major_version: [37]
-        fedora_project: [silverblue]
+        fedora_project: [silverblue, kinoite]
         include:
           - image_name: fedora-base
           - location: ./base
@@ -45,10 +47,10 @@ jobs:
         id: generate-metadata
         shell: bash
         run: |
-          echo "date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "date=$(date +%Y%m%d)-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
+          echo "sha_short=$(git rev-parse --short HEAD)-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
           echo "release=${{ matrix.fedora_major_version }}-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
-          echo "default_tags=${{ matrix.tags }}" >> $GITHUB_OUTPUT
+          echo "default_tags=${{ matrix.tags }}-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
 
       - name: Build image
         id: build_image
@@ -67,7 +69,7 @@ jobs:
             FEDORA_MAJOR_VERSION=${{ matrix.fedora_major_version }}
           oci: true
 
-      # Workaround bug where capital letters in your GitHub user name make it impossible to push to GHCR.
+      # Workaround bug where capital letters in your GitHub user ame make it impossible to push to GHCR.
       # https://github.com/macbre/push-to-ghcr/issues/12
       - name: Set registry
         id: registry_case
