--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -2,14 +2,14 @@ name: Build and Push Image
 
 on:
   # To save on build minutes, this should currently be tested locally and triggered manually
-#  push:
-#    paths-ignore:
-#      - '.github/**'
-#    branches:
-#      - main
-#  pull_request:
-#    paths-ignore:
-#      - '.github/**'
+  #  push:
+  #    paths-ignore:
+  #      - '.github/**'
+  #    branches:
+  #      - main
+  pull_request:
+    paths-ignore:
+      - '.github/**'
   schedule:
     # Every Monday at 00:00 while the repository is not used, or is in active development
     - cron: '0 0 * * 1'
@@ -32,13 +32,13 @@ jobs:
       fail-fast: false
       matrix:
         fedora_major_version: [37]
-        fedora_project: [silverblue, kinoite]
+        fedora_project: [silverblue]
         include:
           - image_name: fedora-base
           - location: ./base
           - tags: ${{ github.sha }}
           - fedora_major_version: 37
-            tags: latest stable
+            tags: [latest, stable]
 
     steps:
       - name: Checkout
@@ -51,7 +51,12 @@ jobs:
           echo "date=$(date +%Y%m%d)-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
           echo "sha_short=$(git rev-parse --short HEAD)-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
           echo "release=${{ matrix.fedora_major_version }}-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
-          echo "default_tags=${{ matrix.tags }}-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
+
+          default_tags=()
+          for tag in ${{ matrix.tags }}; do
+            default_tags+=("${tag}-${{ matrix.fedora_project }}")
+          done
+          echo "default_tags=${default_tags[*]}" >> $GITHUB_OUTPUT
 
       - name: Build image
         id: build_image
@@ -77,7 +82,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: ASzc/change-string-case-action@v5
         with:
-           string: ${{ env.IMAGE_REGISTRY }}
+          string: ${{ env.IMAGE_REGISTRY }}
 
       - name: Push image to GHCR
         id: push
