--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -66,7 +66,7 @@ jobs:
             ${{ steps.generate-metadata.outputs.sha_short }}
           context: ${{ matrix.location }}
           containerfiles: |
-            ${{ matrix.location }}/Containerfile.${{ matrix.fedora_project }}
+            ${{ matrix.location }}/Containerfile.base
           build-args: |
             FEDORA_MAJOR_VERSION=${{ matrix.fedora_major_version }}
           oci: true
