Wrap tags in quotes

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -38,7 +38,7 @@ jobs:
           - location: ./base
           - tags: ${{ github.sha }}
           - fedora_major_version: 37
-            tags: [latest, stable]
+            tags: ["latest", "stable"]
 
     steps:
       - name: Checkout
