--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -17,8 +17,6 @@ on:
 
 env:
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
-  REGISTRY_USER: ${{ github.actor }}
-  REGISTRY_PASSWORD: ${{ github.token }}
 
 concurrency:
   group: ${{ github.head_ref }}
@@ -32,14 +30,15 @@ jobs:
       fail-fast: false
       matrix:
         fedora_major_version: [37]
-        fedora_project: [silverblue]
+        fedora_project: [silverblue, kinoite]
         include:
           - image_name: fedora-base
           - location: ./base
-          - tags: ${{ github.sha }}
+          # Create aliases for the latest and stable tags
           - fedora_major_version: 37
             is_latest: true
             is_stable: true
+          - tags: ${{ github.sha }}
 
     steps:
       - name: Checkout
@@ -74,7 +73,7 @@ jobs:
             ${{ steps.generate-metadata.outputs.sha_short }}
           context: ${{ matrix.location }}
           containerfiles: |
-            ${{ matrix.location }}/Containerfile.base
+            ${{ matrix.location }}/Containerfile.${{ matrix.fedora_project }}
           build-args: |
             FEDORA_MAJOR_VERSION=${{ matrix.fedora_major_version }}
           oci: true
@@ -92,6 +91,9 @@ jobs:
         id: push
         if: github.ref == 'refs/heads/main'
         uses: redhat-actions/push-to-registry@v2
+        env:
+          REGISTRY_USER: ${{ github.actor }}
+          REGISTRY_PASSWORD: ${{ github.token }}
         with:
           image: ${{ matrix.image_name }}
           tags: ${{ steps.build_image.outputs.tags }}
