--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -2,14 +2,14 @@ name: Build and Push Image
 
 on:
   # To save on build minutes, this should currently be tested locally and triggered manually
-#  push:
-#    paths-ignore:
-#      - '.github/**'
-#    branches:
-#      - main
-#  pull_request:
-#    paths-ignore:
-#      - '.github/**'
+  #  push:
+  #    paths-ignore:
+  #      - '.github/**'
+  #    branches:
+  #      - main
+  #pull_request:
+  #  paths-ignore:
+  #    - '.github/**'
   schedule:
     # Every Monday at 00:00 while the repository is not used, or is in active development
     - cron: '0 0 * * 1'
@@ -17,8 +17,6 @@ on:
 
 env:
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
-  REGISTRY_USER: ${{ github.actor }}
-  REGISTRY_PASSWORD: ${{ github.token }}
 
 concurrency:
   group: ${{ github.head_ref }}
@@ -36,9 +34,11 @@ jobs:
         include:
           - image_name: fedora-base
           - location: ./base
-          - tags: ${{ github.sha }}
+          # Create aliases for the latest and stable tags
           - fedora_major_version: 37
-            tags: latest stable
+            is_latest: true
+            is_stable: true
+          - tags: ${{ github.sha }}
 
     steps:
       - name: Checkout
@@ -51,7 +51,15 @@ jobs:
           echo "date=$(date +%Y%m%d)-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
           echo "sha_short=$(git rev-parse --short HEAD)-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
           echo "release=${{ matrix.fedora_major_version }}-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
-          echo "default_tags=${{ matrix.tags }}-${{ matrix.fedora_project }}" >> $GITHUB_OUTPUT
+
+          alias_tags=()
+          if [[ "${{ matrix.is_latest }}" == "true" ]]; then
+            alias_tags+=("latest-${{ matrix.fedora_project }}")
+          fi
+          if [[ "${{ matrix.is_stable }}" == "true" ]]; then
+            alias_tags+=("stable-${{ matrix.fedora_project }}")
+          fi
+          echo "alias_tags=${alias_tags[*]}" >> $GITHUB_OUTPUT
 
       - name: Build image
         id: build_image
@@ -59,7 +67,7 @@ jobs:
         with:
           image: ${{ matrix.image_name }}
           tags: |
-            ${{ steps.generate-metadata.outputs.default_tags }}
+            ${{ steps.generate-metadata.outputs.alias_tags }}
             ${{ steps.generate-metadata.outputs.release }}
             ${{ steps.generate-metadata.outputs.date }}
             ${{ steps.generate-metadata.outputs.sha_short }}
@@ -77,12 +85,15 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: ASzc/change-string-case-action@v5
         with:
-           string: ${{ env.IMAGE_REGISTRY }}
+          string: ${{ env.IMAGE_REGISTRY }}
 
       - name: Push image to GHCR
         id: push
         if: github.ref == 'refs/heads/main'
         uses: redhat-actions/push-to-registry@v2
+        env:
+          REGISTRY_USER: ${{ github.actor }}
+          REGISTRY_PASSWORD: ${{ github.token }}
         with:
           image: ${{ matrix.image_name }}
           tags: ${{ steps.build_image.outputs.tags }}
